--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.83.0",
     "@tailwindcss/vite": "^4.1.6",
     "framer-motion": "^12.23.24",
